feat: Add message-board header component

--- a/src/app/components/message-board/message-board.component.html
+++ b/src/app/components/message-board/message-board.component.html
@@ -9,5 +9,6 @@
     <h3>{{company.name}} HQ</h3>
   </div>
 </div>
+<app-mb-header></app-mb-header>
 <app-mb-message-input *ngIf="mbposts?.length == 0"></app-mb-message-input>
 <app-mb-messages *ngIf="mbposts?.length > 0"></app-mb-messages>
