--- a/src/app/components/mb-messages/mb-messages.component.html
+++ b/src/app/components/mb-messages/mb-messages.component.html
@@ -1,8 +1,5 @@
-  <div class="section" *ngIf="company">
-    <h3><a routerLink="/companies/{{company.id}}">{{company.name}} HQ</a></h3>
-    <h2>Message Board</h2>
     <div class="buttons-container">
-      <button mat-raised-button color="accent">New message</button>
+      <button mat-raised-button color="accent" routerLink="/messages/new">New message</button>
         <span class="form-wrapper" *ngIf="messageboard">
           <mat-form-field>
             <mat-select placeholder="All Messages"  [(ngModel)]="selected" (ngModelChange)="onSelect(selected)">
@@ -16,10 +13,8 @@
           </mat-form-field>
         </span>
     </div>
-  </div>
   <div class="message-list-wrapper" *ngIf="users">
       <mat-list role="list">
-        <!-- <mat-list-item *ngFor="let mbpost of mbposts" role="listitem"> -->
         <mat-list-item *ngFor="let mbpost of selectedData" role="listitem">
           <mat-card class="message-card">
             <mat-card-header>
