--- a/src/app/components/wc-message/wc-message.component.css
+++ b/src/app/components/wc-message/wc-message.component.css
@@ -1,13 +1,36 @@
+.message-container {
+  display: flex;
+  flex-direction: row-reverse;
+  padding-right: 20px;
+  position: relative;
+}
+
 mat-card {
   background: #ecf9fd;
   border-radius: 25px;
+  color: black;
   height: 60px;
-  padding: 5px 30px 5px 5px;
+  padding: 2px 2px 2px 20px;
 }
 
-.watercooler-header-image {
-  background-image: url('http://via.placeholder.com/44x44');
-  background-size: cover;
+
+.mat-card-avatar {
+  position: absolute;
+  left: auto;
+  right: 8px;
+  top: calc((64px - 44px - 12px) / 2);
+  width: 48px;
+  z-index: 1;
+}
+
+img {
+    border: 6px solid #fff;
+    border-radius: 50%;
+    width: 44px;
+}
+
+.mat-card-title {
+  color: grey;
 }
 
 .mat-card-title,
@@ -27,6 +50,10 @@ mat-card {
   display: flex;
 }
 
+.mat-card-header {
+  flex-direction: row-reverse;
+}
+
 mat-card-content {
-  float: right;
+  float: left;
 }
