--- a/src/app/components/watercooler/watercooler.component.html
+++ b/src/app/components/watercooler/watercooler.component.html
@@ -1,21 +1,25 @@
 <div class='section' *ngIf="company">
   <h2><a routerLink="/companies/{{watercooler.company_id}}">{{company.name}} HQ</a></h2>
   <h2 class="motto">Watercooler talk</h2>
-  <p>
-    This is the best place to hash things out quickly, throw links and images back and forth, think out loud, share news, riff, and chat in real-time with your team.
-  </p>
-
-  <p>
-    Start by saying “Hi!” to your team (everyone will be notified that you’re chatting here).
-  </p>
-  <section class="timeline">
-    <ul *ngIf="wcmessages">
-      <li *ngFor="let wcmessage of wcmessages | orderBy: 'wcmessage.created':true">
-          <app-wcmessage [wcmessage]="wcmessage"></app-wcmessage>
-      </li>
-    </ul>
-  </section>
 </div>
+<div class='section' *ngIf="!wcmessages">
+  <p>
+    This is the best place to hash things out quickly, throw links and images
+    back and forth, think out loud, share news, riff, and chat in real-time with
+     your team.
+  </p>
+  <p>
+    Start by saying “Hi!” to your team (everyone will be notified that you’re
+    chatting here).
+  </p>
+</div>
+<section class="timeline">
+  <ul *ngIf="wcmessages">
+    <li *ngFor="let wcmessage of wcmessages | orderBy: 'wcmessage.created':true">
+        <app-wcmessage [wcmessage]="wcmessage"></app-wcmessage>
+    </li>
+  </ul>
+</section>
 <div class="form-container">
   <form class (keyup.enter)="addMessage(box.value); box.value='';">
     <mat-form-field>
