feat: Surround app-report with container with ngIf directive

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,6 @@
 <div class="container">
   <router-outlet></router-outlet>
 </div>
-
-<app-reports></app-reports>
+<div class="report-container" *ngIf="reporting">
+  <app-reports></app-reports>
+</div>
