--- a/src/app/components/mb-message-input/mb-message-input.component.html
+++ b/src/app/components/mb-message-input/mb-message-input.component.html
@@ -20,8 +20,8 @@
         </mat-form-field>
       </div>
       <div class="button-column">
-        <button mat-raised-button color="accent" (click)="addMbPost(titlebox.value, contentbox.value); titlebox.value=''; contentbox.value='';">Save as a draft</button>
-        <button mat-raised-button color="primary">Post this message</button>
+        <button mat-raised-button color="accent">Save as a draft</button>
+        <button mat-raised-button color="primary" (click)="addMbPost(titlebox.value, contentbox.value); titlebox.value=''; contentbox.value='';">Post this message</button>
       </div>
         <!-- </form> -->
     </div>
