fix: Add index to select and set option value to that index

--- a/src/app/components/mb-messages/mb-messages.component.html
+++ b/src/app/components/mb-messages/mb-messages.component.html
@@ -6,8 +6,8 @@
               <mat-option [value]="-1">
                 All Messages
               </mat-option>
-              <mat-option *ngFor="let category of messageboard.categories" [value]="category.id">
-                {{ category.name }}
+              <mat-option *ngFor="let category of messageboard.categories; let i = index;" [value]="i">
+                {{ category }}
               </mat-option>
             </mat-select>
           </mat-form-field>
