feat: Add index to ngFor in option

--- a/src/app/components/mb-message-input/mb-message-input.component.html
+++ b/src/app/components/mb-message-input/mb-message-input.component.html
@@ -3,8 +3,8 @@
       <div class="form-wrapper" *ngIf="messageboard">
         <mat-form-field>
           <mat-select #selectElem placeholder="Pick a category (optional)" (change)="setCategory(selectElem.value)">
-            <mat-option *ngFor="let category of messageboard.categories" [value]="category.id">
-              {{ category.name }}
+            <mat-option *ngFor="let category of messageboard.categories; let i = index;" [value]="i">
+              {{ category }}
             </mat-option>
           </mat-select>
         </mat-form-field>
