--- a/src/app/components/mb-drafts/mb-drafts.component.html
+++ b/src/app/components/mb-drafts/mb-drafts.component.html
@@ -6,17 +6,21 @@
     <mat-grid-tile *ngFor="let mbpost of draftPosts">
       <mat-grid-tile-header>{{mbpost.title}}
         <div class="icon-container" id="water-cooler">
-          <mat-icon aria-label="forum" matTooltip="Water Cooler">forum</mat-icon>
+          <mat-icon aria-label="forum" matTooltip="Water Cooler">drafts</mat-icon>
         </div>
       </mat-grid-tile-header>
-      <div>
-          <div class="message-header-image"><img src="http://via.placeholder.com/40x40" alt="" /></div>
-          <div>
-            {{ messageboard.categories[mbpost.category] }} by {{ getauthorName(mbpost.author) }}
-          </div>
-          <div>
-            {{mbpost.body}}
-          </div>
+      <div class="tile-content">
+        <div class="sub-header">
+          <!-- <div class="message-header-image"> -->
+            <img src="http://via.placeholder.com/34x34" alt="" />
+            <div class="sub-header-content">
+              {{ messageboard.categories[mbpost.category] }} by {{ getauthorName(mbpost.author) }}
+            </div>
+          <!-- </div> -->
+        </div>
+        <div class="message-body">
+          {{mbpost.body}}
+        </div>
       </div>
     </mat-grid-tile>
   </mat-grid-list>
