refactor: Change the routerLink for home

--- a/src/app/components/navi/navi.component.html
+++ b/src/app/components/navi/navi.component.html
@@ -1,6 +1,6 @@
 <ul>
   <li>
-    <button class="padding-left-sm" mat-icon-button routerLink="/">
+    <button class="padding-left-sm" mat-icon-button routerLink="../{{user?.id}}/projects">
       <mat-icon aria-label="Home" matTooltip="Home">home</mat-icon>
       <label>Home</label>
     </button>
