--- a/src/app/components/watercooler/watercooler.component.html
+++ b/src/app/components/watercooler/watercooler.component.html
@@ -1,5 +1,5 @@
-<div class='section' *ngIf="company">
-  <h2><a routerLink="/companies/{{watercooler.company_id}}">{{company.name}} HQ</a></h2>
+<div class='section' *ngIf="project">
+  <h2><a routerLink="/{{user.id}}/projects/{{watercooler.projectId}}">{{project.name}} HQ</a></h2>
   <h2 class="motto">Watercooler talk</h2>
 </div>
 <div class='section' *ngIf="!wcmessages">
