refactor: Rename all company references to project

--- a/src/app/components/mb-header/mb-header.component.html
+++ b/src/app/components/mb-header/mb-header.component.html
@@ -1,4 +1,4 @@
-<div class="section" *ngIf="company">
-  <h3><a routerLink="/companies/{{company.id}}">{{company.name}} HQ</a></h3>
+<div class="section" *ngIf="project">
+  <h3><a routerLink="/{{user?.id}}/projects/{{project?.id}}">{{project.name}} HQ</a></h3>
   <h2>Message Board</h2>
 </div>
