--- a/src/app/components/message-board/message-board.component.html
+++ b/src/app/components/message-board/message-board.component.html
@@ -5,8 +5,8 @@
   </div>
   <div class="clearspace">
   </div>
-  <div class="section" *ngIf="company">
-    <h3>{{company.name}} HQ</h3>
+  <div class="section" *ngIf="project">
+    <h3>{{project.name}} HQ</h3>
   </div>
 </div>
 <app-mb-header></app-mb-header>
