fix: Correct property name
Change references of mpost.body to mbpost.content since .body does not
exist but .content does.

--- a/src/app/components/mb-drafts/mb-drafts.component.html
+++ b/src/app/components/mb-drafts/mb-drafts.component.html
@@ -17,7 +17,7 @@
             </div>
         </div>
         <div class="message-body">
-          {{mbpost.body}}
+          {{mbpost.content}}
         </div>
       </div>
     </mat-grid-tile>
