--- a/src/app/components/mb-messages/mb-messages.component.html
+++ b/src/app/components/mb-messages/mb-messages.component.html
@@ -27,7 +27,7 @@
             </mat-card-header>
             <mat-card-content>
               <p>
-                {{mbpost.created | date:'LLL d'}} — <span>{{mbpost.body}}</span>
+                {{mbpost.created | date:'LLL d'}} — <span>{{mbpost.content}}</span>
               </p>
             </mat-card-content>
           </mat-card>
