--- a/src/app/components/mb-messages/mb-messages.component.html
+++ b/src/app/components/mb-messages/mb-messages.component.html
@@ -14,7 +14,7 @@
         </span>
     </div>
     <div class="drafts-container" *ngIf="draftPosts">
-      <a routerLink="/{{user.id}}/messageboards/drafts">Continue writing {{draftPosts.length}} drafts...</a>
+      <a routerLink="/{{user.id}}/messages/drafts">Continue writing {{draftPosts.length}} drafts...</a>
      </div>
   <div class="message-list-wrapper" *ngIf="users">
       <mat-list role="list">
