--- a/src/app/components/mb-message-draft/mb-message-draft.component.html
+++ b/src/app/components/mb-message-draft/mb-message-draft.component.html
@@ -1,4 +1,21 @@
 <div class="section" *ngIf="project">
-  <h3><a routerLink="/{{user?.id}}/projects/{{project?.id}}">{{project.name}} HQ</a>
-    <a routerLink="/{{user?.id}}/projects/{{project?.id}}/messageboards/{{messageboard.id}}">Message Board</a></h3>
+  <h3><a routerLink="/{{user?.id}}/projects/{{project?.id}}">{{project.name}} HQ</a> >
+    <a routerLink="/{{user?.id}}/projects/{{project?.id}}/messageboards/{{messageboard?.id}}">Message Board</a></h3>
+</div>
+
+<div class="notice">
+  <h3>Unpublished draft.</h3>
+  <div class="button-row">
+    <button mat-raised-button color="accent" (click)="addMbPost(titlebox.value, contentbox.value, true); titlebox.value=''; contentbox.value=''; changeRoute();">Edit this draft</button>
+    <button mat-raised-button color="warn" (click)="addMbPost(titlebox.value, contentbox.value, false); titlebox.value=''; contentbox.value='';">Delete it</button>
+  </div>
+</div>
+
+<div class="draft-container" *ngIf="draftPost">
+  <div class="draft-title">
+    <h1>{{draftPost.title}} </h1>
+  </div>
+  <div class="draft-details">
+    {{draftPost.category}} by {{getauthorName(draftPost.author)}}
+  </div>
 </div>
