fix: Remove old click actions from buttons

--- a/src/app/components/mb-message-draft/mb-message-draft.component.html
+++ b/src/app/components/mb-message-draft/mb-message-draft.component.html
@@ -6,8 +6,8 @@
 <div class="notice">
   <h3>Unpublished draft.</h3>
   <div class="button-row">
-    <button mat-raised-button color="accent" (click)="addMbPost(titlebox.value, contentbox.value, true); titlebox.value=''; contentbox.value=''; changeRoute();">Edit this draft</button>
-    <button mat-raised-button color="warn" (click)="addMbPost(titlebox.value, contentbox.value, false); titlebox.value=''; contentbox.value='';">Delete it</button>
+    <button mat-raised-button color="accent">Edit this draft</button>
+    <button mat-raised-button color="warn">Delete it</button>
   </div>
 </div>
 
