refactor: Assign method to 'Post' button click

--- a/src/app/components/mb-message-edit/mb-message-edit.component.html
+++ b/src/app/components/mb-message-edit/mb-message-edit.component.html
@@ -26,7 +26,7 @@
     </div>
     <div class="button-row">
       <button [@flyInOut]="draft.state" mat-raised-button color="accent" (click)="saveDraft();">Save this draft</button>
-      <button mat-raised-button color="primary" (click)="addMbPost(titlebox.value, contentbox.value, false); titlebox.value=''; contentbox.value='';">Post this message</button>
+      <button mat-raised-button color="primary" (click)="postMessage();">Post this message</button>
     </div>
     <span>Or, <a routerLink="/{{user?.id}}/messages/drafts/{{draft.id}}">Discard my changes</a></span>
   </div>
