feat: Add icon and icon-container

--- a/src/app/components/mb-message-thread/mb-message-thread.component.html
+++ b/src/app/components/mb-message-thread/mb-message-thread.component.html
@@ -12,4 +12,7 @@
   <div class="message-body">
     {{mbpost.content}}
   </div>
+  <div class="icon-container">
+    <mat-icon aria-label="thumbs up">thumb_up</mat-icon>
+  </div>
 </div>
