feat: Add Discussions div and user icon and button below

--- a/src/app/components/mb-message-thread/mb-message-thread.component.html
+++ b/src/app/components/mb-message-thread/mb-message-thread.component.html
@@ -16,3 +16,17 @@
     <mat-icon aria-label="thumbs up">thumb_up</mat-icon>
   </div>
 </div>
+<div>
+  <h2 class='discussions'><span>Discussion</span></h2>
+</div>
+<div class="action-row">
+  <div class="user-details">
+    <div class="user-image"><img src="http://via.placeholder.com/40x40" alt="" /></div>
+
+
+    <div class="button-column">
+      <button class="btn-add" mat-raised-button color="accent" routerLink="/{{user?.id}}/messageboard/{{messageboard?.id}}/new">Add a comment or a file...</button>
+    </div>
+  </div>
+
+</div>
