--- a/src/app/components/mb-message-thread/mb-message-thread.component.css
+++ b/src/app/components/mb-message-thread/mb-message-thread.component.css
@@ -7,7 +7,8 @@ h1 {
  margin: 0;
 }
 
-.message-details {
+.message-details,
+.user-details {
   align-items: center;
   border-top: 1px solid rgba(0,0,0,0.1);
   border-bottom: 1px solid rgba(0,0,0,0.1);
@@ -15,16 +16,19 @@ h1 {
   padding: 5px 0;
 }
 
-.message-image {
+.message-image,
+.user-details {
   border-radius: 50px;
   margin-right: 20px;
 }
 
-.message-image {
+.message-image,
+.user-image {
   margin: 0 5px
 }
 
-.message-image img {
+.message-image img,
+.user-image img {
   border-radius: 50px;
 }
 
@@ -47,3 +51,33 @@ mat-icon {
   top: 2px;
   left: 3px;
 }
+
+
+.discussions:before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 0;
+    right: 0;
+    border-bottom: 3px solid #000;
+    z-index: -1;
+  }
+
+  .discussions {
+    position: relative;
+  }
+
+  .discussions span {
+    display: inline-block;
+    padding: 0 0.5em 0 0;
+    background: #fff;
+  }
+
+  .btn-add {
+    width: 100%;
+    border-radius: 50px;
+  }
+
+  .button-column {
+    width: 100%;
+  }
