--- a/src/app/components/mb-message-thread/mb-message-thread.component.css
+++ b/src/app/components/mb-message-thread/mb-message-thread.component.css
@@ -1,4 +1,4 @@
-h3 {
+h3:not(.subscriber h3) {
   text-align: center;
 }
 
@@ -13,11 +13,14 @@ h1 {
   border-top: 1px solid rgba(0,0,0,0.1);
   border-bottom: 1px solid rgba(0,0,0,0.1);
   display: flex;
-  padding: 5px 0;
+  padding: 2px 0;
 }
 
-.message-image,
-.user-details {
+img {
+  vertical-align: middle;
+}
+
+.message-image {
   border-radius: 50px;
   margin-right: 20px;
 }
@@ -73,11 +76,29 @@ mat-icon {
     background: #fff;
   }
 
-  .btn-add {
-    width: 100%;
+  .btn-add,
+  .btn-people {
     border-radius: 50px;
+    width: 100%;
+  }
+
+  .btn-people {
+    color: white;
   }
 
   .button-column {
     width: 100%;
+  }
+
+  .subscriber {
+    margin-left: 50px;
+  }
+
+  .subscriber h3 {
+    margin-bottom: 0;
+  }
+
+  .subscriber p {
+    font-size: 15px;
+    -webkit-margin-before: 2px;
   }
